--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/clock-512x512.png",
+      "src": "/clock/clock-512x512.png",
       "type": "image/png", "sizes": "512x512"
     }
   ]
